--- a/app/src/main/res/layout/activity_account_fragment.xml
+++ b/app/src/main/res/layout/activity_account_fragment.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".account_fragment">
+    tools:context=".AccountFragment">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
